-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
3
-
9223372036854775807
So far I've only seen this failure in Janitor testing, but it appears to be a bug that could happen in Autotest as well.
Lustre: DEBUG MARKER: == sanity test 160s: changelog garbage collect on idle records * time ====== 07:38:40 (1774438720) Lustre: 215369:0:(mdd_dir.c:1054:mdd_changelog_store()) lustre-MDD0000: starting changelog garbage collection Lustre: 215369:0:(mdd_dir.c:1054:mdd_changelog_store()) Skipped 1 previous similar message Lustre: 228557:0:(mdd_trans.c:163:mdd_chlg_garbage_collect()) lustre-MDD0000: force deregister of changelog user cl2 idle for 864005s with 500000004 unprocessed records Lustre: 228557:0:(mdd_trans.c:163:mdd_chlg_garbage_collect()) Skipped 1 previous similar message LustreError: 215368:0:(llog.c:1241:llog_write_rec()) lustre-MDD0000: loghandle ffff8fd249e47000 with no header LustreError: 215368:0:(llog_cat.c:592:llog_cat_add_rec()) llog_write_rec -71: lh=ffff8fd249e47000 BUG: unable to handle kernel NULL pointer dereference at 0000000000000025 Oops: 0000 [#1] SMP DEBUG_PAGEALLOC CPU: 0 PID: 215368 Comm: mdt00_003 4.18.0rh8.10-debug #2 Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.17.0-8.fc42 06/10/2025 RIP: 0010:llog_cat_add_rec+0x257/0x10c0 [obdclass] Call Trace: llog_add+0x259/0x280 [obdclass] mdd_changelog_store+0x27f/0x9e0 [mdd] mdd_changelog_ns_store+0x975/0x1280 [mdd] mdd_create+0x18c0/0x1d00 [mdd] mdt_create+0xcd7/0x1e50 [mdt] mdt_reint_create+0x336/0x5d0 [mdt] mdt_reint_rec+0x139/0x2b0 [mdt] mdt_reint_internal+0x6a0/0xdc0 [mdt] mdt_reint+0x163/0x190 [mdt] tgt_handle_request0+0x137/0xaf0 [ptlrpc] tgt_request_handle+0x573/0x1e70 [ptlrpc] ptlrpc_server_handle_request+0x443/0x13b0 [ptlrpc] ptlrpc_main+0xce8/0x1400 [ptlrpc]