LU-20042 llog: don't use stale current llog

Plain llog can be deleted during llog processing,
e.g. in llog_changelog_cancel() or when it becomes empty
and there is window between llog_destroy() call and
llog_cat_cleanup() which removes deleted llog from
catalog current_log (LLOG_DEL_PLAIN code paths).
That window is not protected, so chd_current_log can
be taken by any other thread in stale condition -
having lgh_deleted set and last reference put.

Patch adds more check that current llog is sane:
- llog_cat_prep_log() makes sure that loghandle is not
  stale before calling llog_cat_declare_create()
- llog_cat_current_log() returns referenced loghandle
  and makes sure it is not stale too

Additional fixes:
- llog_cat_new_log() returns -EXISTS instead of 0, so
  caller may retry to get it again, otherwise loghandle
  stays with zero lgh_hdr leading to crash/assert
- mdd_changelog_store() tolerates llog errors
  if changelog in turned off in the middle

Test-Parameters: testlist=sanity env=ONLY=160s,ONLY_REPEAT=20
Test-Parameters: testlist=sanity env=ONLY=160,ONLY_REPEAT=10
Signed-off-by: Mikhail Pershin <mpershin@whamcloud.com>
Change-Id: If25344a4e37add6d4e02218052c27ccbf82b5804
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65191
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>